changed rushlist to include a comment and not custom questions

--- a/css/gum.css
+++ b/css/gum.css
@@ -127,7 +127,7 @@ header img{
   font-weight: 300;
 }
 
-.profile .question{
+.question{
   font-size: .75em;
   font-weight: 900;
   margin-top: 15px;
