--- a/css/gum.css
+++ b/css/gum.css
@@ -204,6 +204,19 @@ header img{
   color: #444;
   cursor: default;
 }
+.nav-mobile-container{
+  background-color: #5846e2;
+}
+.nav-toggle{
+  width: 50px;
+  height: 50px;
+  float: right;
+  text-indent: -9999px;
+  overflow: hidden;
+  /*display: block;*/
+  background: #5846e2 url("../images/menu.png") no-repeat 50% 33%;
+  background-size: cover;
+}
 
 @media screen and (min-width: 600px) {
   .nav li {
