--- a/css/gum.css
+++ b/css/gum.css
@@ -207,6 +207,12 @@ header img{
 .nav-mobile-container{
   background-color: #5846e2;
 }
+
+.nav-mobile-container img{
+  max-width: 80%;
+  height: 50px;
+}
+
 .nav-toggle{
   width: 50px;
   height: 50px;
